--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+# Created using "pipreqsnb ./"
+
 beautifulsoup4==4.12.3
 dataframe_image==0.2.3
 gensim==4.3.2
-httpx==0.27.0
+scipy==1.12.0 # Downgrade
+httpx[http2]==0.27.0 # Change to include hhtp2
 ipython==8.12.3
 joblib==1.3.2
 matplotlib==3.8.2
@@ -13,4 +16,4 @@ scikit_learn==1.4.0
 seaborn==0.13.2
 sklearn_evaluation==0.12.1
 tqdm==4.66.2
-jupyter==1.0.0
+jupyter==1.0.0 # Added
